[package]
authors = ["Simon Vandel Sillesen <simon.vandel@gmail.com>"]
name = "spwn"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
clap = "2.20.1"
env_logger = "0.4.0"
futures = "0.1.10"
histogram = "0.6.3"
num_cpus = "1.2.1"
threadpool = "1.3.2"
tokio-core = "0.1.4"

[dependencies.curl]
path = "/home/simon/Documents/curl-rust"

[dependencies.tokio-curl]
path = "/home/simon/Documents/tokio-curl"

[profile]

[profile.release]
debug = true
