[package]
authors = ["Simon Vandel Sillesen <simon.vandel@gmail.com>"]
name = "spwn"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
clap = "2.20.1"
curl = "0.4.5"
env_logger = "0.4.0"
futures = "0.1.10"
histogram = "0.6.3"
num_cpus = "1.2.1"
quickcheck = "0.4"
tokio-core = "0.1.4"
tokio-curl = "0.1.9"

[profile]

[profile.release]
debug = true
