[package]
authors = ["Simon Vandel Sillesen <simon.vandel@gmail.com>"]
name = "spwn"
version = "0.1.0"

[dependencies]
chrono = "0.3"
clap = "2.20.1"
env_logger = "0.4.0"
error-chain = "0.10.0"
futures = "0.1.10"
histogram = "0.6.3"
log = "0.3.6"
num_cpus = "1.2.1"
quickcheck = "0.4"
stopwatch = "0.0.7"
time = "0.1.36"
tokio-core = "0.1.4"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
optional = false

[profile]

[profile.release]
debug = true
